update with 56 changes

--- a/note/afplay.html
+++ b/note/afplay.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,7 +71,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org5f58f1f">사용법</a></li>
+<li><a href="#orgc15cc95">사용법</a></li>
 </ul>
 </div>
 </div>
@@ -82,9 +81,9 @@ afplay는 Audio File Play의 약자로
 오디오 파일 플레이어 유틸리티다.
 </p>
 
-<div id="outline-container-org5f58f1f" class="outline-2">
-<h2 id="org5f58f1f">사용법</h2>
-<div class="outline-text-2" id="text-org5f58f1f">
+<div id="outline-container-orgc15cc95" class="outline-2">
+<h2 id="orgc15cc95">사용법</h2>
+<div class="outline-text-2" id="text-orgc15cc95">
 <div class="org-src-container">
 <pre class="src src-bash">afplay /foo/bar/audio.mp3
 </pre>
@@ -105,7 +104,6 @@ afplay는 Audio File Play의 약자로
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -118,7 +116,6 @@ afplay는 Audio File Play의 약자로
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
