--- a/note/dd.html
+++ b/note/dd.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,9 +71,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org9784bcb">SD 카드에서 이미지 덤프하기</a></li>
-<li><a href="#org082d52a">이미지를 SD 카드에 쓰기</a></li>
-<li><a href="#org81b0e66">팁</a></li>
+<li><a href="#orge1302e0">SD 카드에서 이미지 덤프하기</a></li>
+<li><a href="#org05191b1">이미지를 SD 카드에 쓰기</a></li>
+<li><a href="#org6ecf0a7">팁</a></li>
 </ul>
 </div>
 </div>
@@ -91,9 +90,9 @@ dd는 파일을 변환하거나 복사하는데 사용하는
 Disk Dump의 약자가 아닐까 유추된다.
 </p>
 
-<div id="outline-container-org9784bcb" class="outline-2">
-<h2 id="org9784bcb">SD 카드에서 이미지 덤프하기</h2>
-<div class="outline-text-2" id="text-org9784bcb">
+<div id="outline-container-orge1302e0" class="outline-2">
+<h2 id="orge1302e0">SD 카드에서 이미지 덤프하기</h2>
+<div class="outline-text-2" id="text-orge1302e0">
 <p>
 주로 SD 카드의 내용을 백업할 때 사용한다.
 </p>
@@ -143,9 +142,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-org082d52a" class="outline-2">
-<h2 id="org082d52a">이미지를 SD 카드에 쓰기</h2>
-<div class="outline-text-2" id="text-org082d52a">
+<div id="outline-container-org05191b1" class="outline-2">
+<h2 id="org05191b1">이미지를 SD 카드에 쓰기</h2>
+<div class="outline-text-2" id="text-org05191b1">
 <p>
 백업한 이미지를 이용해 SD 카드나 특정 스토리지에 동일한 내용을 복제하기 위해 사용한다.
 </p>
@@ -167,9 +166,9 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </p>
 </div>
 </div>
-<div id="outline-container-org81b0e66" class="outline-2">
-<h2 id="org81b0e66">팁</h2>
-<div class="outline-text-2" id="text-org81b0e66">
+<div id="outline-container-org6ecf0a7" class="outline-2">
+<h2 id="org6ecf0a7">팁</h2>
+<div class="outline-text-2" id="text-org6ecf0a7">
 <p>
 만약 덤프나 이미지 쓰기가 느리다면
 <a href="macos.html">macOS</a>에서는 <code>/dev/diskN</code> 대신 <code>/dev/rdiskN</code> 를 사용해 볼 수도 있다.
@@ -178,7 +177,6 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -191,7 +189,6 @@ SD 카드라는 이름을 달긴 했지만, 디바이스 파일이 존재하는 
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
