--- a/note/fcpx.html
+++ b/note/fcpx.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,12 +71,12 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org093fe0d">단축키</a>
+<li><a href="#orge18159c">단축키</a>
 <ul>
-<li><a href="#org4b1d481">프로젝트(Project)</a></li>
-<li><a href="#org5c2a1a3">클립 브라우저(Clip Browser)</a></li>
-<li><a href="#org0134049">타임라인(Timeline)</a></li>
-<li><a href="#orgc36e30a">플레이(Play or Preview)</a></li>
+<li><a href="#org4c1af4e">프로젝트(Project)</a></li>
+<li><a href="#orgc8827fd">클립 브라우저(Clip Browser)</a></li>
+<li><a href="#orgf182d34">타임라인(Timeline)</a></li>
+<li><a href="#orgbd47570">플레이(Play or Preview)</a></li>
 </ul>
 </li>
 </ul>
@@ -89,13 +88,13 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 자매 소프트웨어로 <a href="motion.html">Motion</a>과 Compressor가 있다.
 </p>
 
-<div id="outline-container-org093fe0d" class="outline-2">
-<h2 id="org093fe0d">단축키</h2>
-<div class="outline-text-2" id="text-org093fe0d">
+<div id="outline-container-orge18159c" class="outline-2">
+<h2 id="orge18159c">단축키</h2>
+<div class="outline-text-2" id="text-orge18159c">
 </div>
-<div id="outline-container-org4b1d481" class="outline-3">
-<h3 id="org4b1d481">프로젝트(Project)</h3>
-<div class="outline-text-3" id="text-org4b1d481">
+<div id="outline-container-org4c1af4e" class="outline-3">
+<h3 id="org4c1af4e">프로젝트(Project)</h3>
+<div class="outline-text-3" id="text-org4c1af4e">
 <dl class="org-dl">
 <dt><code>Option N</code></dt><dd>New Event</dd>
 <dt><code>Command N</code></dt><dd>New Project</dd>
@@ -104,9 +103,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org5c2a1a3" class="outline-3">
-<h3 id="org5c2a1a3">클립 브라우저(Clip Browser)</h3>
-<div class="outline-text-3" id="text-org5c2a1a3">
+<div id="outline-container-orgc8827fd" class="outline-3">
+<h3 id="orgc8827fd">클립 브라우저(Clip Browser)</h3>
+<div class="outline-text-3" id="text-orgc8827fd">
 <dl class="org-dl">
 <dt><code>Command +</code></dt><dd>Zoom In</dd>
 <dt><code>Command -</code></dt><dd>Zoom Out</dd>
@@ -121,9 +120,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-org0134049" class="outline-3">
-<h3 id="org0134049">타임라인(Timeline)</h3>
-<div class="outline-text-3" id="text-org0134049">
+<div id="outline-container-orgf182d34" class="outline-3">
+<h3 id="orgf182d34">타임라인(Timeline)</h3>
+<div class="outline-text-3" id="text-orgf182d34">
 <dl class="org-dl">
 <dt><code>Shift Z</code></dt><dd>타임라인 전체가 가득 차게 확대 혹은 축소</dd>
 <dt><code>Command +</code></dt><dd>확대(Zoom In)</dd>
@@ -148,9 +147,9 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </dl>
 </div>
 </div>
-<div id="outline-container-orgc36e30a" class="outline-3">
-<h3 id="orgc36e30a">플레이(Play or Preview)</h3>
-<div class="outline-text-3" id="text-orgc36e30a">
+<div id="outline-container-orgbd47570" class="outline-3">
+<h3 id="orgbd47570">플레이(Play or Preview)</h3>
+<div class="outline-text-3" id="text-orgbd47570">
 <dl class="org-dl">
 <dt><code>Space</code></dt><dd>플레이</dd>
 <dt><code>L</code></dt><dd>플레이 및 속도 증가</dd>
@@ -161,7 +160,6 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -174,7 +172,6 @@ Final Cut Pro X는 애플의 동영상 편집 소프트웨어다.
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
