--- a/note/flake8.html
+++ b/note/flake8.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,11 +71,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orge26ffde">설치</a></li>
-<li><a href="#orgcd1120b">사용법</a></li>
-<li><a href="#org6ecd19d">설정 파일</a></li>
-<li><a href="#org09cccc0">파일 별로 일부 경고 무시하기</a></li>
-<li><a href="#org45d4117">외부 링크</a></li>
+<li><a href="#orgc69902e">설치</a></li>
+<li><a href="#org09480aa">사용법</a></li>
+<li><a href="#org0381397">설정 파일</a></li>
+<li><a href="#orgf44735c">파일 별로 일부 경고 무시하기</a></li>
+<li><a href="#org0ee7fb0">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -88,9 +87,9 @@ gtag('config', 'UA-44534026-1');
 PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 
-<div id="outline-container-orge26ffde" class="outline-2">
-<h2 id="orge26ffde">설치</h2>
-<div class="outline-text-2" id="text-orge26ffde">
+<div id="outline-container-orgc69902e" class="outline-2">
+<h2 id="orgc69902e">설치</h2>
+<div class="outline-text-2" id="text-orgc69902e">
 <p>
 파이썬 패키지이기 때문에 <a href="pip.html">pip</a>로 그냥 설치할 수 있다.
 </p>
@@ -100,9 +99,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </div>
 </div>
 </div>
-<div id="outline-container-orgcd1120b" class="outline-2">
-<h2 id="orgcd1120b">사용법</h2>
-<div class="outline-text-2" id="text-orgcd1120b">
+<div id="outline-container-org09480aa" class="outline-2">
+<h2 id="org09480aa">사용법</h2>
+<div class="outline-text-2" id="text-org09480aa">
 <p>
 <a href="cli.html">CLI</a>로 그냥 실행시키면 된다.
 </p>
@@ -122,9 +121,9 @@ PEP8 코딩 컨벤션에 맞지 않는 것도 (매우 귀찮게) 알려 준다.
 </p>
 </div>
 </div>
-<div id="outline-container-org6ecd19d" class="outline-2">
-<h2 id="org6ecd19d">설정 파일</h2>
-<div class="outline-text-2" id="text-org6ecd19d">
+<div id="outline-container-org0381397" class="outline-2">
+<h2 id="org0381397">설정 파일</h2>
+<div class="outline-text-2" id="text-org0381397">
 <p>
 전역 설정 파일은 <code>~/.config/flake8</code> 파일에,
 프로젝트 단위 설정은 프로젝트 루트에 <code>.flake8</code>
@@ -156,9 +155,9 @@ exclude = file_to_exclude.py
 </p>
 </div>
 </div>
-<div id="outline-container-org09cccc0" class="outline-2">
-<h2 id="org09cccc0">파일 별로 일부 경고 무시하기</h2>
-<div class="outline-text-2" id="text-org09cccc0">
+<div id="outline-container-orgf44735c" class="outline-2">
+<h2 id="orgf44735c">파일 별로 일부 경고 무시하기</h2>
+<div class="outline-text-2" id="text-orgf44735c">
 <p>
 커맨드 라인 옵션으로 특정 체크를 무시할 수 있다.
 </p>
@@ -191,9 +190,9 @@ exclude = file_to_exclude.py
 </div>
 </div>
 </div>
-<div id="outline-container-org45d4117" class="outline-2">
-<h2 id="org45d4117">외부 링크</h2>
-<div class="outline-text-2" id="text-org45d4117">
+<div id="outline-container-org0ee7fb0" class="outline-2">
+<h2 id="org0ee7fb0">외부 링크</h2>
+<div class="outline-text-2" id="text-org0ee7fb0">
 <ul class="org-ul">
 <li><a target="_blank" href="https://seorenn.tistory.com/68">🌏파이썬 코드 문법 검사기 flake8</a>: 이 글과
 거의 동일한 내용이다.
@@ -203,7 +202,6 @@ exclude = file_to_exclude.py
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -216,7 +214,6 @@ exclude = file_to_exclude.py
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
