--- a/note/flutter.html
+++ b/note/flutter.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,10 +71,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org43b369d">문제 해결</a>
+<li><a href="#org62ee34c">문제 해결</a>
 <ul>
-<li><a href="#org9a893e8">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#org2846149">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#org349c4a0">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#org40b87ac">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
 </ul>
@@ -91,13 +90,13 @@ Flutter(플러터)는 Dart라는 한 가지 언어로 iOS, Android 등
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-org43b369d" class="outline-2">
-<h2 id="org43b369d">문제 해결</h2>
-<div class="outline-text-2" id="text-org43b369d">
+<div id="outline-container-org62ee34c" class="outline-2">
+<h2 id="org62ee34c">문제 해결</h2>
+<div class="outline-text-2" id="text-org62ee34c">
 </div>
-<div id="outline-container-org9a893e8" class="outline-3">
-<h3 id="org9a893e8">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org9a893e8">
+<div id="outline-container-org349c4a0" class="outline-3">
+<h3 id="org349c4a0">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org349c4a0">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -130,9 +129,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-org2846149" class="outline-3">
-<h3 id="org2846149">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-org2846149">
+<div id="outline-container-org40b87ac" class="outline-3">
+<h3 id="org40b87ac">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-org40b87ac">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
@@ -168,7 +167,6 @@ was built for iOS. (in target 'Runner' from project 'Runner')
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -181,7 +179,6 @@ was built for iOS. (in target 'Runner' from project 'Runner')
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
