--- a/note/homebrew.html
+++ b/note/homebrew.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,22 +71,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga66f5de">기본 사용법</a>
+<li><a href="#org331a061">기본 사용법</a>
 <ul>
-<li><a href="#org9cfbf34">패키지 검색</a></li>
-<li><a href="#org6ea58ef">패키지 정보</a></li>
-<li><a href="#orgc80dd85">패키지 설치</a></li>
-<li><a href="#org634c4db">만료된 버전 확인</a></li>
-<li><a href="#org397355b">패키지 업그레이드</a></li>
-<li><a href="#orgcda3553">구 버전 삭제하기</a></li>
-<li><a href="#org902f42f">패키지 삭제(uninstall)</a></li>
-<li><a href="#orgeb25e89">의사 양반(?)</a></li>
+<li><a href="#org410967f">패키지 검색</a></li>
+<li><a href="#org65fa870">패키지 정보</a></li>
+<li><a href="#org04f4247">패키지 설치</a></li>
+<li><a href="#orga7662ba">만료된 버전 확인</a></li>
+<li><a href="#orgf8d0dd4">패키지 업그레이드</a></li>
+<li><a href="#org469cf37">구 버전 삭제하기</a></li>
+<li><a href="#orgc8c2fec">패키지 삭제(uninstall)</a></li>
+<li><a href="#org6400175">의사 양반(?)</a></li>
 </ul>
 </li>
-<li><a href="#org36369d8">구 버전 패키지 사용하기</a></li>
-<li><a href="#org1000cc8">다중 버전을 제공하는 패키지의 경우</a></li>
-<li><a href="#orgbf4ee8d">Cask</a></li>
-<li><a href="#orgf85c39a">외부 링크</a></li>
+<li><a href="#orgf280ca9">구 버전 패키지 사용하기</a></li>
+<li><a href="#org16fedaf">다중 버전을 제공하는 패키지의 경우</a></li>
+<li><a href="#org79ff2b5">Cask</a></li>
+<li><a href="#orgedca8e1">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -98,31 +97,31 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 또한 root 사용자가 아니어도 사용할 수도 있도록 구조를 만들어 준다는 점도 특징이다.
 </p>
 
-<div id="outline-container-orga66f5de" class="outline-2">
-<h2 id="orga66f5de">기본 사용법</h2>
-<div class="outline-text-2" id="text-orga66f5de">
+<div id="outline-container-org331a061" class="outline-2">
+<h2 id="org331a061">기본 사용법</h2>
+<div class="outline-text-2" id="text-org331a061">
 </div>
-<div id="outline-container-org9cfbf34" class="outline-3">
-<h3 id="org9cfbf34">패키지 검색</h3>
-<div class="outline-text-3" id="text-org9cfbf34">
+<div id="outline-container-org410967f" class="outline-3">
+<h3 id="org410967f">패키지 검색</h3>
+<div class="outline-text-3" id="text-org410967f">
 <div class="org-src-container">
 <pre class="src src-bash">brew search KEYWORD
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-org6ea58ef" class="outline-3">
-<h3 id="org6ea58ef">패키지 정보</h3>
-<div class="outline-text-3" id="text-org6ea58ef">
+<div id="outline-container-org65fa870" class="outline-3">
+<h3 id="org65fa870">패키지 정보</h3>
+<div class="outline-text-3" id="text-org65fa870">
 <div class="org-src-container">
 <pre class="src src-bash">brew info PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgc80dd85" class="outline-3">
-<h3 id="orgc80dd85">패키지 설치</h3>
-<div class="outline-text-3" id="text-orgc80dd85">
+<div id="outline-container-org04f4247" class="outline-3">
+<h3 id="org04f4247">패키지 설치</h3>
+<div class="outline-text-3" id="text-org04f4247">
 <div class="org-src-container">
 <pre class="src src-bash">brew install PACKAGE_NAME
 </pre>
@@ -133,9 +132,9 @@ Homebrew는 <a href="macos.html">macOS</a> 전용 패키지 관리자다.
 </p>
 </div>
 </div>
-<div id="outline-container-org634c4db" class="outline-3">
-<h3 id="org634c4db">만료된 버전 확인</h3>
-<div class="outline-text-3" id="text-org634c4db">
+<div id="outline-container-orga7662ba" class="outline-3">
+<h3 id="orga7662ba">만료된 버전 확인</h3>
+<div class="outline-text-3" id="text-orga7662ba">
 <p>
 설치된 패키지의 최신 버전이 존재하는지 확인하려면 <code>update</code> 후
 <code>outdated</code> 를 살펴보자.
@@ -147,9 +146,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org397355b" class="outline-3">
-<h3 id="org397355b">패키지 업그레이드</h3>
-<div class="outline-text-3" id="text-org397355b">
+<div id="outline-container-orgf8d0dd4" class="outline-3">
+<h3 id="orgf8d0dd4">패키지 업그레이드</h3>
+<div class="outline-text-3" id="text-orgf8d0dd4">
 <div class="org-src-container">
 <pre class="src src-bash">brew upgrade PACKAGE_NAME
 </pre>
@@ -163,9 +162,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-orgcda3553" class="outline-3">
-<h3 id="orgcda3553">구 버전 삭제하기</h3>
-<div class="outline-text-3" id="text-orgcda3553">
+<div id="outline-container-org469cf37" class="outline-3">
+<h3 id="org469cf37">구 버전 삭제하기</h3>
+<div class="outline-text-3" id="text-org469cf37">
 <p>
 패키지를 업그레이드해도 구 버전은 그대로 남아 파일 시스템에 잔존한다.
 이를 청소하기 위해 <code>cleanup</code> 커맨드를 사용할 수 있다.
@@ -179,18 +178,18 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org902f42f" class="outline-3">
-<h3 id="org902f42f">패키지 삭제(uninstall)</h3>
-<div class="outline-text-3" id="text-org902f42f">
+<div id="outline-container-orgc8c2fec" class="outline-3">
+<h3 id="orgc8c2fec">패키지 삭제(uninstall)</h3>
+<div class="outline-text-3" id="text-orgc8c2fec">
 <div class="org-src-container">
 <pre class="src src-bash">brew uninstall PACKAGE_NAME
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgeb25e89" class="outline-3">
-<h3 id="orgeb25e89">의사 양반(?)</h3>
-<div class="outline-text-3" id="text-orgeb25e89">
+<div id="outline-container-org6400175" class="outline-3">
+<h3 id="org6400175">의사 양반(?)</h3>
+<div class="outline-text-3" id="text-org6400175">
 <div class="org-src-container">
 <pre class="src src-bash">brew doctor
 </pre>
@@ -201,9 +200,9 @@ brew outdated
 </div>
 </div>
 </div>
-<div id="outline-container-org36369d8" class="outline-2">
-<h2 id="org36369d8">구 버전 패키지 사용하기</h2>
-<div class="outline-text-2" id="text-org36369d8">
+<div id="outline-container-orgf280ca9" class="outline-2">
+<h2 id="orgf280ca9">구 버전 패키지 사용하기</h2>
+<div class="outline-text-2" id="text-orgf280ca9">
 <p>
 만약 <code>upgrade</code> 등으로 최신버전이 설치되었다면
 해당 패키지의 구 버전도 여전히 파일 시스템에 남아있다.
@@ -218,9 +217,9 @@ brew outdated
 </p>
 </div>
 </div>
-<div id="outline-container-org1000cc8" class="outline-2">
-<h2 id="org1000cc8">다중 버전을 제공하는 패키지의 경우</h2>
-<div class="outline-text-2" id="text-org1000cc8">
+<div id="outline-container-org16fedaf" class="outline-2">
+<h2 id="org16fedaf">다중 버전을 제공하는 패키지의 경우</h2>
+<div class="outline-text-2" id="text-org16fedaf">
 <p>
 다중 버전의 패키지가 필요한 경우 우선 지원되는지 부터 확인해봐야 한다.
 예를 들어 node.js 의 경우 LTS 버전이 다양하게 제공되고 있다.
@@ -323,9 +322,9 @@ v10.x.x
 </p>
 </div>
 </div>
-<div id="outline-container-orgbf4ee8d" class="outline-2">
-<h2 id="orgbf4ee8d">Cask</h2>
-<div class="outline-text-2" id="text-orgbf4ee8d">
+<div id="outline-container-org79ff2b5" class="outline-2">
+<h2 id="org79ff2b5">Cask</h2>
+<div class="outline-text-2" id="text-org79ff2b5">
 <p>
 cask는 <a href="macos.html">macOS</a> 응용 소프트웨어나
 다양한 리소스를 설치할 수 있게 도와주는 확장 도구다.
@@ -359,16 +358,15 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </p>
 </div>
 </div>
-<div id="outline-container-orgf85c39a" class="outline-2">
-<h2 id="orgf85c39a">외부 링크</h2>
-<div class="outline-text-2" id="text-orgf85c39a">
+<div id="outline-container-orgedca8e1" class="outline-2">
+<h2 id="orgedca8e1">외부 링크</h2>
+<div class="outline-text-2" id="text-orgedca8e1">
 <ul class="org-ul">
 <li><a target="_blank" href="https://brew.sh">🌏Homebrew 공식 홈페이지</a></li>
 </ul>
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -381,7 +379,6 @@ outdated나 upgrade, uninstall 등등의 커맨드는 비슷하게 사용할 수
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
