--- a/note/javascript.html
+++ b/note/javascript.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,22 +71,22 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgafb57f5">노트</a>
+<li><a href="#org770569d">노트</a>
 <ul>
-<li><a href="#org2f1d503">모듈(Module)</a></li>
-<li><a href="#org86fea0e">스프레드(Spreads) 연산자</a></li>
-<li><a href="#orgd3a12d5">튜플 비슷한 문법</a></li>
+<li><a href="#org1a637c8">모듈(Module)</a></li>
+<li><a href="#org5217880">스프레드(Spreads) 연산자</a></li>
+<li><a href="#orge7e0c8c">튜플 비슷한 문법</a></li>
 </ul>
 </li>
-<li><a href="#org45b5afd">실전(?) 메모</a>
+<li><a href="#org0b78910">실전(?) 메모</a>
 <ul>
-<li><a href="#org54188c8">요소 얻기</a></li>
-<li><a href="#org059f737">특정 블록에 HTML 넣기</a></li>
-<li><a href="#orgb181b31">콘텐츠 높이 구하기</a></li>
-<li><a href="#org154885c">특정 태그 앞에 요소 넣기</a></li>
+<li><a href="#orgc18281e">요소 얻기</a></li>
+<li><a href="#org5763142">특정 블록에 HTML 넣기</a></li>
+<li><a href="#orgbc5ce77">콘텐츠 높이 구하기</a></li>
+<li><a href="#org6a5d28a">특정 태그 앞에 요소 넣기</a></li>
 </ul>
 </li>
-<li><a href="#org0b77228">외부 링크</a></li>
+<li><a href="#orgd561061">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -105,13 +104,13 @@ gtag('config', 'UA-44534026-1');
 버전은 ES6를 기준으로 한다.
 </p>
 
-<div id="outline-container-orgafb57f5" class="outline-2">
-<h2 id="orgafb57f5">노트</h2>
-<div class="outline-text-2" id="text-orgafb57f5">
+<div id="outline-container-org770569d" class="outline-2">
+<h2 id="org770569d">노트</h2>
+<div class="outline-text-2" id="text-org770569d">
 </div>
-<div id="outline-container-org2f1d503" class="outline-3">
-<h3 id="org2f1d503">모듈(Module)</h3>
-<div class="outline-text-3" id="text-org2f1d503">
+<div id="outline-container-org1a637c8" class="outline-3">
+<h3 id="org1a637c8">모듈(Module)</h3>
+<div class="outline-text-3" id="text-org1a637c8">
 <p>
 일반적으로 모듈은 아래와 같은 형식으로 쓰인다.
 </p>
@@ -163,9 +162,9 @@ console.log(someValues.value2);
 </div>
 </div>
 </div>
-<div id="outline-container-org86fea0e" class="outline-3">
-<h3 id="org86fea0e">스프레드(Spreads) 연산자</h3>
-<div class="outline-text-3" id="text-org86fea0e">
+<div id="outline-container-org5217880" class="outline-3">
+<h3 id="org5217880">스프레드(Spreads) 연산자</h3>
+<div class="outline-text-3" id="text-org5217880">
 <p>
 스프레드 연산자는 <code>...</code> 으로 표기되며
 이름처럼 펼치거나 확산한다라는 의미로 동작한다.
@@ -228,9 +227,9 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd3a12d5" class="outline-3">
-<h3 id="orgd3a12d5">튜플 비슷한 문법</h3>
-<div class="outline-text-3" id="text-orgd3a12d5">
+<div id="outline-container-orge7e0c8c" class="outline-3">
+<h3 id="orge7e0c8c">튜플 비슷한 문법</h3>
+<div class="outline-text-3" id="text-orge7e0c8c">
 <div class="org-src-container">
 <pre class="src src-javascript"><span style="color: #51afef;">let</span> [<span style="color: #dcaeea;">foo</span>, <span style="color: #dcaeea;">bar</span>] = [<span style="color: #da8548; font-weight: bold;">1</span>, <span style="color: #da8548; font-weight: bold;">2</span>]
 [foo, bar] = [bar, foo]
@@ -242,13 +241,13 @@ rest에는 <code>[2, 3, 4, 5]</code> 가 들어간다.
 </div>
 </div>
 </div>
-<div id="outline-container-org45b5afd" class="outline-2">
-<h2 id="org45b5afd">실전(?) 메모</h2>
-<div class="outline-text-2" id="text-org45b5afd">
+<div id="outline-container-org0b78910" class="outline-2">
+<h2 id="org0b78910">실전(?) 메모</h2>
+<div class="outline-text-2" id="text-org0b78910">
 </div>
-<div id="outline-container-org54188c8" class="outline-3">
-<h3 id="org54188c8">요소 얻기</h3>
-<div class="outline-text-3" id="text-org54188c8">
+<div id="outline-container-orgc18281e" class="outline-3">
+<h3 id="orgc18281e">요소 얻기</h3>
+<div class="outline-text-3" id="text-orgc18281e">
 <div class="org-src-container">
 <pre class="src src-javascript">document.getElementById(<span style="color: #98be65;">'some-id'</span>)
 document.getElementsByClassName(<span style="color: #98be65;">'some-class'</span>)[<span style="color: #da8548; font-weight: bold;">0</span>]
@@ -260,9 +259,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org059f737" class="outline-3">
-<h3 id="org059f737">특정 블록에 HTML 넣기</h3>
-<div class="outline-text-3" id="text-org059f737">
+<div id="outline-container-org5763142" class="outline-3">
+<h3 id="org5763142">특정 블록에 HTML 넣기</h3>
+<div class="outline-text-3" id="text-org5763142">
 <p>
 아래는 some-id라는 아이디의 div 블록 내부 내용을 지정하는 예제다.
 </p>
@@ -272,9 +271,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </div>
 </div>
 </div>
-<div id="outline-container-orgb181b31" class="outline-3">
-<h3 id="orgb181b31">콘텐츠 높이 구하기</h3>
-<div class="outline-text-3" id="text-orgb181b31">
+<div id="outline-container-orgbc5ce77" class="outline-3">
+<h3 id="orgbc5ce77">콘텐츠 높이 구하기</h3>
+<div class="outline-text-3" id="text-orgbc5ce77">
 <p>
 웹 브라우저에 표시되는 내용의 높이(height)를 구하는 방법이다.
 </p>
@@ -294,9 +293,9 @@ document.getElementsByTagName(<span style="color: #98be65;">'tag-name'</span>)[<
 </p>
 </div>
 </div>
-<div id="outline-container-org154885c" class="outline-3">
-<h3 id="org154885c">특정 태그 앞에 요소 넣기</h3>
-<div class="outline-text-3" id="text-org154885c">
+<div id="outline-container-org6a5d28a" class="outline-3">
+<h3 id="org6a5d28a">특정 태그 앞에 요소 넣기</h3>
+<div class="outline-text-3" id="text-org6a5d28a">
 <p>
 수동으로 노드를 만들어서 특정 태그 노드 앞에 붙이는 예제다.
 </p>
@@ -323,9 +322,9 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </div>
 </div>
-<div id="outline-container-org0b77228" class="outline-2">
-<h2 id="org0b77228">외부 링크</h2>
-<div class="outline-text-2" id="text-org0b77228">
+<div id="outline-container-orgd561061" class="outline-2">
+<h2 id="orgd561061">외부 링크</h2>
+<div class="outline-text-2" id="text-orgd561061">
 <ul class="org-ul">
 <li><a target="_blank" href="https://ko.javascript.info/">🌏모던 JavaScript 튜토리얼</a></li>
 <li><a target="_blank" href="https://junhobaik.github.io/es2016-es2020/">🌏ECMAScript ES2016~ES2020 정리</a></li>
@@ -333,7 +332,6 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -346,7 +344,6 @@ targetElement.parentNode.insertBefore(newElement, targetElement)
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
