--- a/note/macos.html
+++ b/note/macos.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,9 +71,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org30ab882">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgc9815de">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org7208e16">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org69786e6">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgb20d971">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgdc75332">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -99,17 +98,17 @@ macOS 는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org30ab882" class="outline-2">
-<h2 id="org30ab882">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org30ab882">
+<div id="outline-container-org69786e6" class="outline-2">
+<h2 id="org69786e6">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org69786e6">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgc9815de" class="outline-2">
-<h2 id="orgc9815de">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgc9815de">
+<div id="outline-container-orgb20d971" class="outline-2">
+<h2 id="orgb20d971">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgb20d971">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -129,9 +128,9 @@ macOS 는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org7208e16" class="outline-2">
-<h2 id="org7208e16">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org7208e16">
+<div id="outline-container-orgdc75332" class="outline-2">
+<h2 id="orgdc75332">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgdc75332">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -149,7 +148,6 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -162,7 +160,6 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
