--- a/note/magit.html
+++ b/note/magit.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,16 +71,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8967fd9">magit-status</a></li>
-<li><a href="#orgc99eb54">Stage</a></li>
-<li><a href="#orgc0de4b0">Commit</a></li>
-<li><a href="#org9866fe1">Log</a></li>
-<li><a href="#org161a43e">Push</a></li>
-<li><a href="#orgd279938">Pull</a></li>
-<li><a href="#org57427d5">Branch</a></li>
-<li><a href="#org55827a3">Reset or Revert</a></li>
-<li><a href="#orgf3165cc">기타</a></li>
-<li><a href="#org4beefac">외부 링크</a></li>
+<li><a href="#org521854b">magit-status</a></li>
+<li><a href="#org34a8333">Stage</a></li>
+<li><a href="#orgd007411">Commit</a></li>
+<li><a href="#orgec02ea8">Log</a></li>
+<li><a href="#orgee51b92">Push</a></li>
+<li><a href="#orgef93765">Pull</a></li>
+<li><a href="#orgf0d5146">Branch</a></li>
+<li><a href="#org784ed4e">Reset or Revert</a></li>
+<li><a href="#org526583e">기타</a></li>
+<li><a href="#org9422382">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -102,9 +101,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 <a href="spacemacs.html">Spacemacs</a>용으로 커스터마이징 된
 단축키를 위주로 정리한다.
 </p>
-<div id="outline-container-org8967fd9" class="outline-2">
-<h2 id="org8967fd9">magit-status</h2>
-<div class="outline-text-2" id="text-org8967fd9">
+<div id="outline-container-org521854b" class="outline-2">
+<h2 id="org521854b">magit-status</h2>
+<div class="outline-text-2" id="text-org521854b">
 <p>
 현재 상태를 표시하는 UI를 띄운다.
 개인적으로 magit 을 시작하는 가장 좋은 방법으로 사용한다.
@@ -126,9 +125,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgc99eb54" class="outline-2">
-<h2 id="orgc99eb54">Stage</h2>
-<div class="outline-text-2" id="text-orgc99eb54">
+<div id="outline-container-org34a8333" class="outline-2">
+<h2 id="org34a8333">Stage</h2>
+<div class="outline-text-2" id="text-org34a8333">
 <p>
 수정된 파일을 선택하고 <code>s</code> 를 누르면 스테이지가 된다.
 각 수정 내역에서 <code>TAB</code> 을 누르면 간단한 diff를 볼 수 있는데
@@ -141,9 +140,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-orgc0de4b0" class="outline-2">
-<h2 id="orgc0de4b0">Commit</h2>
-<div class="outline-text-2" id="text-orgc0de4b0">
+<div id="outline-container-orgd007411" class="outline-2">
+<h2 id="orgd007411">Commit</h2>
+<div class="outline-text-2" id="text-orgd007411">
 <p>
 <code>c c</code> 를 누르면 커밋 모드로 바뀐다.
 스테이지 된 파일들의 간략한 변경점을 볼 수 있으며
@@ -159,9 +158,9 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org9866fe1" class="outline-2">
-<h2 id="org9866fe1">Log</h2>
-<div class="outline-text-2" id="text-org9866fe1">
+<div id="outline-container-orgec02ea8" class="outline-2">
+<h2 id="orgec02ea8">Log</h2>
+<div class="outline-text-2" id="text-orgec02ea8">
 <p>
 <code>l l</code> 을 이용하면 로그를 볼 수 있다.
 </p>
@@ -171,25 +170,25 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </p>
 </div>
 </div>
-<div id="outline-container-org161a43e" class="outline-2">
-<h2 id="org161a43e">Push</h2>
-<div class="outline-text-2" id="text-org161a43e">
+<div id="outline-container-orgee51b92" class="outline-2">
+<h2 id="orgee51b92">Push</h2>
+<div class="outline-text-2" id="text-orgee51b92">
 <p>
 <code>p p</code> 를 이용하면 원격에 현재 브랜치 이름으로 푸시(push) 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd279938" class="outline-2">
-<h2 id="orgd279938">Pull</h2>
-<div class="outline-text-2" id="text-orgd279938">
+<div id="outline-container-orgef93765" class="outline-2">
+<h2 id="orgef93765">Pull</h2>
+<div class="outline-text-2" id="text-orgef93765">
 <p>
 <code>F u</code> 를 이용하면 origin 에서 현재 브랜치로 풀(pull)이 된다.
 </p>
 </div>
 </div>
-<div id="outline-container-org57427d5" class="outline-2">
-<h2 id="org57427d5">Branch</h2>
-<div class="outline-text-2" id="text-org57427d5">
+<div id="outline-container-orgf0d5146" class="outline-2">
+<h2 id="orgf0d5146">Branch</h2>
+<div class="outline-text-2" id="text-orgf0d5146">
 <dl class="org-dl">
 <dt><code>b c</code></dt><dd>브랜치 생성</dd>
 <dt><code>b b</code></dt><dd>브랜치 전환</dd>
@@ -197,26 +196,26 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </dl>
 </div>
 </div>
-<div id="outline-container-org55827a3" class="outline-2">
-<h2 id="org55827a3">Reset or Revert</h2>
-<div class="outline-text-2" id="text-org55827a3">
+<div id="outline-container-org784ed4e" class="outline-2">
+<h2 id="org784ed4e">Reset or Revert</h2>
+<div class="outline-text-2" id="text-org784ed4e">
 <p>
 <code>x</code> :: 변경 사항을 날리고 원래대로(HEAD) 돌린다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgf3165cc" class="outline-2">
-<h2 id="orgf3165cc">기타</h2>
-<div class="outline-text-2" id="text-orgf3165cc">
+<div id="outline-container-org526583e" class="outline-2">
+<h2 id="org526583e">기타</h2>
+<div class="outline-text-2" id="text-org526583e">
 <ul class="org-ul">
 <li><code>magit-status</code> 에서 <code>$</code> 키를 누르면
 실제로 사용되는 커맨드 및 응답 등의 로그를 볼 수 있다.</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org4beefac" class="outline-2">
-<h2 id="org4beefac">외부 링크</h2>
-<div class="outline-text-2" id="text-org4beefac">
+<div id="outline-container-org9422382" class="outline-2">
+<h2 id="org9422382">외부 링크</h2>
+<div class="outline-text-2" id="text-org9422382">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.youtube.com/watch?v=qntVkQyacPY">🌏Spacemacs #7 Magit Basics | 기본적인 가이드</a></li>
 <li><a target="_blank" href="https://www.youtube.com/watch?v=ZITDJZAB68w">🌏Spacemacs #8 Magit: Remote REPO / Squash Commits | 원격저장소, 커밋합치기</a></li>
@@ -224,7 +223,6 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -237,7 +235,6 @@ Magit은 <a href="emacs.html">Emacs</a>용 <a href="git.html">Git</a>
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
