--- a/note/spacemacs.html
+++ b/note/spacemacs.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,7 +71,7 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4c20dd7">외부 링크</a></li>
+<li><a href="#orgc19501e">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -94,9 +93,9 @@ gtag('config', 'UA-44534026-1');
 여전히 좋은 설정 패키지라고 생각한다.
 </p>
 
-<div id="outline-container-org4c20dd7" class="outline-2">
-<h2 id="org4c20dd7">외부 링크</h2>
-<div class="outline-text-2" id="text-org4c20dd7">
+<div id="outline-container-orgc19501e" class="outline-2">
+<h2 id="orgc19501e">외부 링크</h2>
+<div class="outline-text-2" id="text-orgc19501e">
 <ul class="org-ul">
 <li><a target="_blank" href="https://www.spacemacs.org/">🌏스페이맥스 공식 홈페이지</a></li>
 <li><a target="_blank" href="https://www.youtube.com/playlist?list=PLPNohcoOBa5GejCpa5-Mw79bXnyynM1Nn">🌏The (Subjective) Spacemacs Howto</a>:
@@ -106,7 +105,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -119,7 +117,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
