--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,11 +71,11 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org76019e5">사용법</a>
+<li><a href="#org0c4d2c1">사용법</a>
 <ul>
-<li><a href="#org4c131d1">무제한 잠자기 방지</a></li>
-<li><a href="#orgb245260">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org121bc40">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#orgd9544f8">무제한 잠자기 방지</a></li>
+<li><a href="#orgfafd630">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org162ae08">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -87,13 +86,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org76019e5" class="outline-2">
-<h2 id="org76019e5">사용법</h2>
-<div class="outline-text-2" id="text-org76019e5">
+<div id="outline-container-org0c4d2c1" class="outline-2">
+<h2 id="org0c4d2c1">사용법</h2>
+<div class="outline-text-2" id="text-org0c4d2c1">
 </div>
-<div id="outline-container-org4c131d1" class="outline-3">
-<h3 id="org4c131d1">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org4c131d1">
+<div id="outline-container-orgd9544f8" class="outline-3">
+<h3 id="orgd9544f8">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgd9544f8">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -104,9 +103,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-orgb245260" class="outline-3">
-<h3 id="orgb245260">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-orgb245260">
+<div id="outline-container-orgfafd630" class="outline-3">
+<h3 id="orgfafd630">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgfafd630">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -117,9 +116,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org121bc40" class="outline-3">
-<h3 id="org121bc40">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org121bc40">
+<div id="outline-container-org162ae08" class="outline-3">
+<h3 id="org162ae08">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org162ae08">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
@@ -131,7 +130,6 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -144,7 +142,6 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
