--- a/note/dockerfile.html
+++ b/note/dockerfile.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,10 +71,10 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org82b4c93">평범한 스펙 예제</a></li>
-<li><a href="#orgdca8f7a">사용자 지정</a></li>
-<li><a href="#org5144b51">Health Checking</a></li>
-<li><a href="#org4360047">Multi Stage Building</a></li>
+<li><a href="#org34030ed">평범한 스펙 예제</a></li>
+<li><a href="#org5d03cc8">사용자 지정</a></li>
+<li><a href="#org4723aaf">Health Checking</a></li>
+<li><a href="#orgbd8d439">Multi Stage Building</a></li>
 </ul>
 </div>
 </div>
@@ -84,9 +83,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 특수한 DSL 스크립트 언어로 작성하는 스펙 파일이다.
 </p>
 
-<div id="outline-container-org82b4c93" class="outline-2">
-<h2 id="org82b4c93">평범한 스펙 예제</h2>
-<div class="outline-text-2" id="text-org82b4c93">
+<div id="outline-container-org34030ed" class="outline-2">
+<h2 id="org34030ed">평범한 스펙 예제</h2>
+<div class="outline-text-2" id="text-org34030ed">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">FROM</span> <span style="color: #ECBE7B; font-weight: bold;">debian:buster</span>
 
@@ -131,9 +130,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </p>
 </div>
 </div>
-<div id="outline-container-orgdca8f7a" class="outline-2">
-<h2 id="orgdca8f7a">사용자 지정</h2>
-<div class="outline-text-2" id="text-orgdca8f7a">
+<div id="outline-container-org5d03cc8" class="outline-2">
+<h2 id="org5d03cc8">사용자 지정</h2>
+<div class="outline-text-2" id="text-org5d03cc8">
 <p>
 특정 사용자로 굴리고(?) 싶다면 <code>USER</code> 커맨드를 쓸 수 있다.
 </p>
@@ -148,9 +147,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </p>
 </div>
 </div>
-<div id="outline-container-org5144b51" class="outline-2">
-<h2 id="org5144b51">Health Checking</h2>
-<div class="outline-text-2" id="text-org5144b51">
+<div id="outline-container-org4723aaf" class="outline-2">
+<h2 id="org4723aaf">Health Checking</h2>
+<div class="outline-text-2" id="text-org4723aaf">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">HEALTHCHECK</span> --<span style="color: #dcaeea;">interval</span>=5s <span style="color: #98be65;">\</span>
             --<span style="color: #dcaeea;">timeout</span>=5s <span style="color: #98be65;">\</span>
@@ -160,9 +159,9 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </div>
 </div>
 </div>
-<div id="outline-container-org4360047" class="outline-2">
-<h2 id="org4360047">Multi Stage Building</h2>
-<div class="outline-text-2" id="text-org4360047">
+<div id="outline-container-orgbd8d439" class="outline-2">
+<h2 id="orgbd8d439">Multi Stage Building</h2>
+<div class="outline-text-2" id="text-orgbd8d439">
 <div class="org-src-container">
 <pre class="src src-dockerfile"><span style="color: #51afef;">FROM</span> <span style="color: #ECBE7B; font-weight: bold;">someimage</span> AS <span style="color: #a9a1e1; font-weight: bold;">stage1</span>
 ...
@@ -178,7 +177,6 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -191,7 +189,6 @@ Dockerfile은 <a href="docker.html">Docker</a> 용 이미지를 빌드하기 위
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
