--- a/note/find.html
+++ b/note/find.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,14 +71,14 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbb4014b">기본 사용법</a>
+<li><a href="#orgf1a8d06">기본 사용법</a>
 <ul>
-<li><a href="#org3f87743">현재 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org3d5d593">특정 디렉터리에서 특정 파일 검색하기</a></li>
-<li><a href="#org6bbf7cb">검색 패턴</a></li>
-<li><a href="#org8e443df">대소문자 무시하기</a></li>
-<li><a href="#org47c490c">검색 종류 지정하기</a></li>
-<li><a href="#orga6b5627">검색 내용으로 특정 처리하기(exec)</a></li>
+<li><a href="#orgef1ad2d">현재 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#org6c85fe8">특정 디렉터리에서 특정 파일 검색하기</a></li>
+<li><a href="#orgfd64406">검색 패턴</a></li>
+<li><a href="#org0d30cfb">대소문자 무시하기</a></li>
+<li><a href="#orgeb901fa">검색 종류 지정하기</a></li>
+<li><a href="#org61eefdd">검색 내용으로 특정 처리하기(exec)</a></li>
 </ul>
 </li>
 </ul>
@@ -90,13 +89,13 @@ gtag('config', 'UA-44534026-1');
 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orgbb4014b" class="outline-2">
-<h2 id="orgbb4014b">기본 사용법</h2>
-<div class="outline-text-2" id="text-orgbb4014b">
+<div id="outline-container-orgf1a8d06" class="outline-2">
+<h2 id="orgf1a8d06">기본 사용법</h2>
+<div class="outline-text-2" id="text-orgf1a8d06">
 </div>
-<div id="outline-container-org3f87743" class="outline-3">
-<h3 id="org3f87743">현재 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org3f87743">
+<div id="outline-container-orgef1ad2d" class="outline-3">
+<h3 id="orgef1ad2d">현재 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-orgef1ad2d">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> . -name <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -108,9 +107,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org3d5d593" class="outline-3">
-<h3 id="org3d5d593">특정 디렉터리에서 특정 파일 검색하기</h3>
-<div class="outline-text-3" id="text-org3d5d593">
+<div id="outline-container-org6c85fe8" class="outline-3">
+<h3 id="org6c85fe8">특정 디렉터리에서 특정 파일 검색하기</h3>
+<div class="outline-text-3" id="text-org6c85fe8">
 <div class="org-src-container">
 <pre class="src src-bash"><span style="color: #ECBE7B;">find</span> /foo/bar <span style="color: #98be65;">"somename.ext"</span>
 </pre>
@@ -120,9 +119,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org6bbf7cb" class="outline-3">
-<h3 id="org6bbf7cb">검색 패턴</h3>
-<div class="outline-text-3" id="text-org6bbf7cb">
+<div id="outline-container-orgfd64406" class="outline-3">
+<h3 id="orgfd64406">검색 패턴</h3>
+<div class="outline-text-3" id="text-orgfd64406">
 <p>
 찾을 패턴으로 와일드카드를 사용할 수도 있다.
 </p>
@@ -135,9 +134,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-org8e443df" class="outline-3">
-<h3 id="org8e443df">대소문자 무시하기</h3>
-<div class="outline-text-3" id="text-org8e443df">
+<div id="outline-container-org0d30cfb" class="outline-3">
+<h3 id="org0d30cfb">대소문자 무시하기</h3>
+<div class="outline-text-3" id="text-org0d30cfb">
 <p>
 기본적으로 이 도구는 대소문자를 가린다.
 만약 대소문자를 가리지 않으려면 <code>iname</code> 옵션을 사용할 수 있다.
@@ -148,9 +147,9 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org47c490c" class="outline-3">
-<h3 id="org47c490c">검색 종류 지정하기</h3>
-<div class="outline-text-3" id="text-org47c490c">
+<div id="outline-container-orgeb901fa" class="outline-3">
+<h3 id="orgeb901fa">검색 종류 지정하기</h3>
+<div class="outline-text-3" id="text-orgeb901fa">
 <p>
 만약 특정한 종류만 검색하고 싶다면 <code>type</code> 옵션을 사용할 수 있다.
 </p>
@@ -168,9 +167,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orga6b5627" class="outline-3">
-<h3 id="orga6b5627">검색 내용으로 특정 처리하기(exec)</h3>
-<div class="outline-text-3" id="text-orga6b5627">
+<div id="outline-container-org61eefdd" class="outline-3">
+<h3 id="org61eefdd">검색 내용으로 특정 처리하기(exec)</h3>
+<div class="outline-text-3" id="text-org61eefdd">
 <p>
 <code>-exec</code> 옵션은 검색된 내용을 이용해 외부 도구를 실행시킬 수 있게 할 수 있다.
 </p>
@@ -199,7 +198,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -212,7 +210,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
