--- a/note/grep.html
+++ b/note/grep.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,16 +71,16 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#orga91dbf7">기본 사용법</a></li>
-<li><a href="#orga73b5f8">대소문자 무시</a></li>
-<li><a href="#org5384ea0">바이너리(Binary) 파일 무시하기</a></li>
-<li><a href="#org8da39dc">재귀(Recursive) 검색</a></li>
-<li><a href="#org19e5f33">검색된 파일 이름만 보기</a></li>
-<li><a href="#org969c398">단어만 검색하기</a></li>
-<li><a href="#orgb7d0e70">줄 번호(Line Number) 보기</a></li>
-<li><a href="#orge21f399">발견 개수 보기</a></li>
-<li><a href="#org0a0b684">검색되지 않는 것만 보기</a></li>
-<li><a href="#org3c08a4e">정규표현식</a></li>
+<li><a href="#org6fe0499">기본 사용법</a></li>
+<li><a href="#org8c13e41">대소문자 무시</a></li>
+<li><a href="#org45bbb26">바이너리(Binary) 파일 무시하기</a></li>
+<li><a href="#org3d933bf">재귀(Recursive) 검색</a></li>
+<li><a href="#orgb963d85">검색된 파일 이름만 보기</a></li>
+<li><a href="#org5f8b887">단어만 검색하기</a></li>
+<li><a href="#orgba50f3e">줄 번호(Line Number) 보기</a></li>
+<li><a href="#orgd1315a4">발견 개수 보기</a></li>
+<li><a href="#org4479598">검색되지 않는 것만 보기</a></li>
+<li><a href="#org8e818a6">정규표현식</a></li>
 </ul>
 </div>
 </div>
@@ -89,9 +88,9 @@ gtag('config', 'UA-44534026-1');
 Grep은 파일이나 텍스트에서 특정 텍스트를 검색하는 데 사용되는 *NIX <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-orga91dbf7" class="outline-2">
-<h2 id="orga91dbf7">기본 사용법</h2>
-<div class="outline-text-2" id="text-orga91dbf7">
+<div id="outline-container-org6fe0499" class="outline-2">
+<h2 id="org6fe0499">기본 사용법</h2>
+<div class="outline-text-2" id="text-org6fe0499">
 <p>
 기본적으로는 텍스트 파일에서 문자열을 검색하는 것을 생각할 수 있다.
 </p>
@@ -118,9 +117,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orga73b5f8" class="outline-2">
-<h2 id="orga73b5f8">대소문자 무시</h2>
-<div class="outline-text-2" id="text-orga73b5f8">
+<div id="outline-container-org8c13e41" class="outline-2">
+<h2 id="org8c13e41">대소문자 무시</h2>
+<div class="outline-text-2" id="text-org8c13e41">
 <p>
 <code>-i</code> 옵션을 사용하면 대소문자를 가리지 않고 검색한다.
 </p>
@@ -130,9 +129,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-org5384ea0" class="outline-2">
-<h2 id="org5384ea0">바이너리(Binary) 파일 무시하기</h2>
-<div class="outline-text-2" id="text-org5384ea0">
+<div id="outline-container-org45bbb26" class="outline-2">
+<h2 id="org45bbb26">바이너리(Binary) 파일 무시하기</h2>
+<div class="outline-text-2" id="text-org45bbb26">
 <p>
 가끔 이진 파일에서 검색하느라 느려지거나 이상한 것을 검색하기도 하는데, 이를 때는 <code>-I</code> 옵션을 사용할 수 있다.
 </p>
@@ -142,9 +141,9 @@ this is sample
 </div>
 </div>
 </div>
-<div id="outline-container-org8da39dc" class="outline-2">
-<h2 id="org8da39dc">재귀(Recursive) 검색</h2>
-<div class="outline-text-2" id="text-org8da39dc">
+<div id="outline-container-org3d933bf" class="outline-2">
+<h2 id="org3d933bf">재귀(Recursive) 검색</h2>
+<div class="outline-text-2" id="text-org3d933bf">
 <p>
 재귀 검색이란 하위 디렉터리를 모두 다 뒤져본다는 의미다.
 </p>
@@ -170,9 +169,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org19e5f33" class="outline-2">
-<h2 id="org19e5f33">검색된 파일 이름만 보기</h2>
-<div class="outline-text-2" id="text-org19e5f33">
+<div id="outline-container-orgb963d85" class="outline-2">
+<h2 id="orgb963d85">검색된 파일 이름만 보기</h2>
+<div class="outline-text-2" id="text-orgb963d85">
 <p>
 <code>-l</code> 옵션은 발견된 패턴을 화면에 표시하지 않게 한다.
 </p>
@@ -187,9 +186,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org969c398" class="outline-2">
-<h2 id="org969c398">단어만 검색하기</h2>
-<div class="outline-text-2" id="text-org969c398">
+<div id="outline-container-org5f8b887" class="outline-2">
+<h2 id="org5f8b887">단어만 검색하기</h2>
+<div class="outline-text-2" id="text-org5f8b887">
 <p>
 단어 단위 검색을 하기 위해서 <code>-w</code> 옵션을 사용할 수 있다.
 </p>
@@ -202,9 +201,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orgb7d0e70" class="outline-2">
-<h2 id="orgb7d0e70">줄 번호(Line Number) 보기</h2>
-<div class="outline-text-2" id="text-orgb7d0e70">
+<div id="outline-container-orgba50f3e" class="outline-2">
+<h2 id="orgba50f3e">줄 번호(Line Number) 보기</h2>
+<div class="outline-text-2" id="text-orgba50f3e">
 <p>
 <code>-n</code> 옵션을 이용해 줄 번호를 표시할 수 있다.
 </p>
@@ -217,9 +216,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-orge21f399" class="outline-2">
-<h2 id="orge21f399">발견 개수 보기</h2>
-<div class="outline-text-2" id="text-orge21f399">
+<div id="outline-container-orgd1315a4" class="outline-2">
+<h2 id="orgd1315a4">발견 개수 보기</h2>
+<div class="outline-text-2" id="text-orgd1315a4">
 <p>
 <code>-c</code> 옵션을 주면 발견된 개수(count)를 구할 수 있다.
 </p>
@@ -232,9 +231,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org0a0b684" class="outline-2">
-<h2 id="org0a0b684">검색되지 않는 것만 보기</h2>
-<div class="outline-text-2" id="text-org0a0b684">
+<div id="outline-container-org4479598" class="outline-2">
+<h2 id="org4479598">검색되지 않는 것만 보기</h2>
+<div class="outline-text-2" id="text-org4479598">
 <p>
 <code>-v</code> 옵션을 주면 검색되지 않는 라인을 화면에 표시한다.
 </p>
@@ -247,9 +246,9 @@ this is sample
 </p>
 </div>
 </div>
-<div id="outline-container-org3c08a4e" class="outline-2">
-<h2 id="org3c08a4e">정규표현식</h2>
-<div class="outline-text-2" id="text-org3c08a4e">
+<div id="outline-container-org8e818a6" class="outline-2">
+<h2 id="org8e818a6">정규표현식</h2>
+<div class="outline-text-2" id="text-org8e818a6">
 <p>
 원래 정규표현식이 지원되지 때문에 그냥 써도 된다.
 </p>
@@ -270,7 +269,6 @@ this is sample
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -283,7 +281,6 @@ this is sample
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
