--- a/note/motion.html
+++ b/note/motion.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,15 +71,15 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8a51483">단축키</a></li>
-<li><a href="#orgf049069">팁</a>
+<li><a href="#org4258868">단축키</a></li>
+<li><a href="#orgddcfbf3">팁</a>
 <ul>
-<li><a href="#orgd46ac20">효과 적용 시간 보장하기</a></li>
+<li><a href="#org550584d">효과 적용 시간 보장하기</a></li>
 </ul>
 </li>
-<li><a href="#org8ce736f">기타</a>
+<li><a href="#org3a95dd2">기타</a>
 <ul>
-<li><a href="#org8a94a1b">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
+<li><a href="#orga6594fc">한글 폰트가 폰트 목록에 나타나지 않을 때</a></li>
 </ul>
 </li>
 </ul>
@@ -96,9 +95,9 @@ gtag('config', 'UA-44534026-1');
 그래서 혹자는 "<a href="fcpx.html">Final Cut Pro X</a>과 모션을 같이 써야 완전체다" 라고 말하기도 한다.
 </p>
 
-<div id="outline-container-org8a51483" class="outline-2">
-<h2 id="org8a51483">단축키</h2>
-<div class="outline-text-2" id="text-org8a51483">
+<div id="outline-container-org4258868" class="outline-2">
+<h2 id="org4258868">단축키</h2>
+<div class="outline-text-2" id="text-org4258868">
 <dl class="org-dl">
 <dt><code>Command D</code></dt><dd>복제(Duplicate)</dd>
 <dt><code>Shift M</code></dt><dd>마커(Marker)</dd>
@@ -106,13 +105,13 @@ gtag('config', 'UA-44534026-1');
 </dl>
 </div>
 </div>
-<div id="outline-container-orgf049069" class="outline-2">
-<h2 id="orgf049069">팁</h2>
-<div class="outline-text-2" id="text-orgf049069">
+<div id="outline-container-orgddcfbf3" class="outline-2">
+<h2 id="orgddcfbf3">팁</h2>
+<div class="outline-text-2" id="text-orgddcfbf3">
 </div>
-<div id="outline-container-orgd46ac20" class="outline-3">
-<h3 id="orgd46ac20">효과 적용 시간 보장하기</h3>
-<div class="outline-text-3" id="text-orgd46ac20">
+<div id="outline-container-org550584d" class="outline-3">
+<h3 id="org550584d">효과 적용 시간 보장하기</h3>
+<div class="outline-text-3" id="text-org550584d">
 <p>
 타이틀 템플릿은 프로젝트 기본 설정과는 다르게 마음껏 늘여서 쓸 수도 있다.
 이럴 경우 애니메이션 등의 효과도 같이 늘어나게 되는데, 이 애니메이션 시간을 원래 프로젝트에서 만든 시간으로 보정할 수 있다.
@@ -130,13 +129,13 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 </div>
-<div id="outline-container-org8ce736f" class="outline-2">
-<h2 id="org8ce736f">기타</h2>
-<div class="outline-text-2" id="text-org8ce736f">
+<div id="outline-container-org3a95dd2" class="outline-2">
+<h2 id="org3a95dd2">기타</h2>
+<div class="outline-text-2" id="text-org3a95dd2">
 </div>
-<div id="outline-container-org8a94a1b" class="outline-3">
-<h3 id="org8a94a1b">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
-<div class="outline-text-3" id="text-org8a94a1b">
+<div id="outline-container-orga6594fc" class="outline-3">
+<h3 id="orga6594fc">한글 폰트가 폰트 목록에 나타나지 않을 때</h3>
+<div class="outline-text-3" id="text-orga6594fc">
 <p>
 아직 버그인지 모르겠지만, <a href="macos.html">macOS</a>를 한국어로 설정해서 사용하는 경우
 한글로 된 폰트가 폰트 목록에서 누락되는 경우가 있다.
@@ -147,7 +146,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -160,7 +158,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
