--- a/note/sh.html
+++ b/note/sh.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,27 +71,27 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org22f2eca">소개</a></li>
-<li><a href="#orgee6e4de">스크립팅 노트</a>
+<li><a href="#org95442c6">소개</a></li>
+<li><a href="#orgde6246b">스크립팅 노트</a>
 <ul>
-<li><a href="#org495c1ba">실행 가능한 스크립트</a></li>
-<li><a href="#orgc3ffec2">if</a></li>
-<li><a href="#org96e3287">루프</a></li>
-<li><a href="#org26ce8fb">조건식 오퍼레이터</a></li>
-<li><a href="#orgf2e2744">디렉토리 존재 유무 체크</a></li>
-<li><a href="#org1d3400b">파일 개수</a></li>
-<li><a href="#org5fc2c28">와일드카드 인자 처리</a></li>
-<li><a href="#orge9d31e7">에러가 나면 멈추게 하기</a></li>
-<li><a href="#orgbf9610d">에러 메시지 숨기기</a></li>
+<li><a href="#orgf9e01e4">실행 가능한 스크립트</a></li>
+<li><a href="#org7eb6983">if</a></li>
+<li><a href="#org115d070">루프</a></li>
+<li><a href="#org70e9865">조건식 오퍼레이터</a></li>
+<li><a href="#org9402c94">디렉토리 존재 유무 체크</a></li>
+<li><a href="#org2234c1d">파일 개수</a></li>
+<li><a href="#orgdefe2ea">와일드카드 인자 처리</a></li>
+<li><a href="#orge232bcb">에러가 나면 멈추게 하기</a></li>
+<li><a href="#org5bb698d">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org22f2eca" class="outline-2">
-<h2 id="org22f2eca">소개</h2>
-<div class="outline-text-2" id="text-org22f2eca">
+<div id="outline-container-org95442c6" class="outline-2">
+<h2 id="org95442c6">소개</h2>
+<div class="outline-text-2" id="text-org95442c6">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -101,16 +100,16 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgee6e4de" class="outline-2">
-<h2 id="orgee6e4de">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-orgee6e4de">
+<div id="outline-container-orgde6246b" class="outline-2">
+<h2 id="orgde6246b">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-orgde6246b">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-org495c1ba" class="outline-3">
-<h3 id="org495c1ba">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-org495c1ba">
+<div id="outline-container-orgf9e01e4" class="outline-3">
+<h3 id="orgf9e01e4">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-orgf9e01e4">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -171,9 +170,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgc3ffec2" class="outline-3">
-<h3 id="orgc3ffec2">if</h3>
-<div class="outline-text-3" id="text-orgc3ffec2">
+<div id="outline-container-org7eb6983" class="outline-3">
+<h3 id="org7eb6983">if</h3>
+<div class="outline-text-3" id="text-org7eb6983">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -212,9 +211,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org96e3287" class="outline-3">
-<h3 id="org96e3287">루프</h3>
-<div class="outline-text-3" id="text-org96e3287">
+<div id="outline-container-org115d070" class="outline-3">
+<h3 id="org115d070">루프</h3>
+<div class="outline-text-3" id="text-org115d070">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -231,9 +230,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org26ce8fb" class="outline-3">
-<h3 id="org26ce8fb">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org26ce8fb">
+<div id="outline-container-org70e9865" class="outline-3">
+<h3 id="org70e9865">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-org70e9865">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -248,9 +247,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orgf2e2744" class="outline-3">
-<h3 id="orgf2e2744">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-orgf2e2744">
+<div id="outline-container-org9402c94" class="outline-3">
+<h3 id="org9402c94">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-org9402c94">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -265,9 +264,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org1d3400b" class="outline-3">
-<h3 id="org1d3400b">파일 개수</h3>
-<div class="outline-text-3" id="text-org1d3400b">
+<div id="outline-container-org2234c1d" class="outline-3">
+<h3 id="org2234c1d">파일 개수</h3>
+<div class="outline-text-3" id="text-org2234c1d">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -291,9 +290,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org5fc2c28" class="outline-3">
-<h3 id="org5fc2c28">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-org5fc2c28">
+<div id="outline-container-orgdefe2ea" class="outline-3">
+<h3 id="orgdefe2ea">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-orgdefe2ea">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -311,9 +310,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orge9d31e7" class="outline-3">
-<h3 id="orge9d31e7">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-orge9d31e7">
+<div id="outline-container-orge232bcb" class="outline-3">
+<h3 id="orge232bcb">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-orge232bcb">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -323,9 +322,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-orgbf9610d" class="outline-3">
-<h3 id="orgbf9610d">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-orgbf9610d">
+<div id="outline-container-org5bb698d" class="outline-3">
+<h3 id="org5bb698d">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-org5bb698d">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
@@ -337,7 +336,6 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -350,7 +348,6 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
