--- a/note/special-char-name.html
+++ b/note/special-char-name.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -165,9 +164,9 @@ gtag('config', 'UA-44534026-1');
 </tbody>
 </table>
 
-<div id="outline-container-org1870a70" class="outline-2">
-<h2 id="org1870a70">참고</h2>
-<div class="outline-text-2" id="text-org1870a70">
+<div id="outline-container-org1d4754a" class="outline-2">
+<h2 id="org1d4754a">참고</h2>
+<div class="outline-text-2" id="text-org1d4754a">
 <ul class="org-ul">
 <li>Apostrophe와 작은 따옴표는 원래 용도가 다르다.
 키보드에서 같은 키로 입력하기 때문에 이렇게 적었을 뿐이니 오해하지 말자.</li>
@@ -175,7 +174,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -188,7 +186,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
