--- a/note/tmux.html
+++ b/note/tmux.html
@@ -35,7 +35,7 @@ function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'UA-44534026-1');
 </script>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <header class="top-header">
@@ -49,7 +49,6 @@ gtag('config', 'UA-44534026-1');
 </div>
 </header>
 <div class="top-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle top-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -72,20 +71,20 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org09c0f91">사용법</a></li>
-<li><a href="#org5c6369c">설정 방법</a>
+<li><a href="#org8520482">사용법</a></li>
+<li><a href="#org59ae9b3">설정 방법</a>
 <ul>
-<li><a href="#orgc768c11">리더 키(Prefix) 변경하기</a></li>
+<li><a href="#orgb5ebe54">리더 키(Prefix) 변경하기</a></li>
 </ul>
 </li>
-<li><a href="#orgda0b567">단축키</a></li>
-<li><a href="#orgbfe9db0">기타 팁</a>
+<li><a href="#org17fdd06">단축키</a></li>
+<li><a href="#orgc914bcb">기타 팁</a>
 <ul>
-<li><a href="#orgd070dc9">선택 영역 복사하기</a></li>
-<li><a href="#org80a1f3a">종료하지 않고 설정 다시 읽어 들이기</a></li>
+<li><a href="#orge72be1d">선택 영역 복사하기</a></li>
+<li><a href="#orgef6fa0c">종료하지 않고 설정 다시 읽어 들이기</a></li>
 </ul>
 </li>
-<li><a href="#orge058ff2">관련된 글들</a></li>
+<li><a href="#org7daf0fe">관련된 글들</a></li>
 </ul>
 </div>
 </div>
@@ -99,9 +98,9 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 비슷하면서도 원조 격인 <code>screen</code> 이라는 도구에 영향을 많이 받은 것으로 보인다.
 </p>
 
-<div id="outline-container-org09c0f91" class="outline-2">
-<h2 id="org09c0f91">사용법</h2>
-<div class="outline-text-2" id="text-org09c0f91">
+<div id="outline-container-org8520482" class="outline-2">
+<h2 id="org8520482">사용법</h2>
+<div class="outline-text-2" id="text-org8520482">
 <p>
 그냥 실행시키면 실행은 된다.
 </p>
@@ -127,16 +126,16 @@ Tmux 는 터미널 멀티플렉서라고 불리는 도구다.
 </div>
 </div>
 </div>
-<div id="outline-container-org5c6369c" class="outline-2">
-<h2 id="org5c6369c">설정 방법</h2>
-<div class="outline-text-2" id="text-org5c6369c">
+<div id="outline-container-org59ae9b3" class="outline-2">
+<h2 id="org59ae9b3">설정 방법</h2>
+<div class="outline-text-2" id="text-org59ae9b3">
 <p>
 <code>~/.tmux.conf</code> 파일에 원하는 설정을 기록할 수 있다.
 </p>
 </div>
-<div id="outline-container-orgc768c11" class="outline-3">
-<h3 id="orgc768c11">리더 키(Prefix) 변경하기</h3>
-<div class="outline-text-3" id="text-orgc768c11">
+<div id="outline-container-orgb5ebe54" class="outline-3">
+<h3 id="orgb5ebe54">리더 키(Prefix) 변경하기</h3>
+<div class="outline-text-3" id="text-orgb5ebe54">
 <p>
 기본 리더키는 <code>^b</code> (Ctrl-B)로 설정되어 있다.
 이걸 바꾸려면, 예를 들어 리더 키를 <code>^\</code> 로 바꾸려면
@@ -166,9 +165,9 @@ set-option -g prefix2 C-']'
 </div>
 </div>
 </div>
-<div id="outline-container-orgda0b567" class="outline-2">
-<h2 id="orgda0b567">단축키</h2>
-<div class="outline-text-2" id="text-orgda0b567">
+<div id="outline-container-org17fdd06" class="outline-2">
+<h2 id="org17fdd06">단축키</h2>
+<div class="outline-text-2" id="text-org17fdd06">
 <p>
 아래에 언급하는 모든 단축키는 리더 키(Prefix)를 먼저 누른 후 눌러야 한다.
 참고로 리더 키는 앞서 언급한 대로
@@ -191,13 +190,13 @@ set-option -g prefix2 C-']'
 </dl>
 </div>
 </div>
-<div id="outline-container-orgbfe9db0" class="outline-2">
-<h2 id="orgbfe9db0">기타 팁</h2>
-<div class="outline-text-2" id="text-orgbfe9db0">
+<div id="outline-container-orgc914bcb" class="outline-2">
+<h2 id="orgc914bcb">기타 팁</h2>
+<div class="outline-text-2" id="text-orgc914bcb">
 </div>
-<div id="outline-container-orgd070dc9" class="outline-3">
-<h3 id="orgd070dc9">선택 영역 복사하기</h3>
-<div class="outline-text-3" id="text-orgd070dc9">
+<div id="outline-container-orge72be1d" class="outline-3">
+<h3 id="orge72be1d">선택 영역 복사하기</h3>
+<div class="outline-text-3" id="text-orge72be1d">
 <p>
 마우스로 드래그 해서 <code>^C</code> 혹은 Command-C 를 눌렀는데 복사가 안 된다면
 <code>^W</code> (Ctrl+W)를 눌러보자.
@@ -211,9 +210,9 @@ set-option -g prefix2 C-']'
 </p>
 </div>
 </div>
-<div id="outline-container-org80a1f3a" class="outline-3">
-<h3 id="org80a1f3a">종료하지 않고 설정 다시 읽어 들이기</h3>
-<div class="outline-text-3" id="text-org80a1f3a">
+<div id="outline-container-orgef6fa0c" class="outline-3">
+<h3 id="orgef6fa0c">종료하지 않고 설정 다시 읽어 들이기</h3>
+<div class="outline-text-3" id="text-orgef6fa0c">
 <p>
 tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 리더 키(Prefix)를 누르고 아래 커맨드를 입력해 보자.
@@ -241,9 +240,9 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 </div>
-<div id="outline-container-orge058ff2" class="outline-2">
-<h2 id="orge058ff2">관련된 글들</h2>
-<div class="outline-text-2" id="text-orge058ff2">
+<div id="outline-container-org7daf0fe" class="outline-2">
+<h2 id="org7daf0fe">관련된 글들</h2>
+<div class="outline-text-2" id="text-org7daf0fe">
 <ul class="org-ul">
 <li><a target="_blank" href="https://github.com/gpakosz/.tmux">🌏🇫🇷 Oh My Tmux! Pretty &amp; versatile tmux configuration</a>:
 잘 만들어진 설정을 공유하고 있으며 그대로 쓰기에도 괜찮고
@@ -252,7 +251,6 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </div>
 <div class="mid-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle mid-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
@@ -265,7 +263,6 @@ tmux를 종료하지 않고 바꾼 설정을 적용하고 싶다면
 </div>
 </section>
 <div class="side-ad-container">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle side-ad"
      style="display:block"
      data-ad-client="ca-pub-1071465863344332"
